--- a/WH marine wilderness methodology.ipynb
+++ b/WH marine wilderness methodology.ipynb
@@ -43,7 +43,7 @@
     "The distribution of marine wilderness areas within EEZ (green pixels below, as defined by the top 10% least pressured areas within EEZ, excluding Antarctica).\n",
     "![dist-map](dist_EEZ.png)\n",
     "Here is the overlay of existing marine World Heritage sites and marine wilderness areas. It seems quite apparent that large parts of the existing wilderness remains to be explored...\n",
-    "![dist-map-wh](dist_eez_wh.png)"
+    "![dist-map-wh](dist_EEZ_WH.png)"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -67,26 +67,26 @@
      "output_type": "stream",
      "text": [
       "                                PROVINCE   per_ltt\n",
-      "0                              Marquesas  0.681158\n",
-      "1               Subantarctic New Zealand  0.664097\n",
-      "2                   Subantarctic Islands  0.528809\n",
+      "24                             Marquesas  0.681158\n",
+      "45              Subantarctic New Zealand  0.664097\n",
+      "44                  Subantarctic Islands  0.528809\n",
       "3                                 Arctic  0.467926\n",
-      "4                   Southern New Zealand  0.340892\n",
-      "5                      Amsterdam-St Paul  0.303475\n",
-      "6                      Central Polynesia  0.242988\n",
-      "7             Northeast Australian Shelf  0.238981\n",
-      "8                            Sahul Shelf  0.209192\n",
-      "9                             Scotia Sea  0.161785\n",
-      "10                                  None  0.159536\n",
-      "11                    North Brazil Shelf  0.102526\n",
-      "12                   Southeast Polynesia  0.082473\n",
-      "13                            Magellanic  0.079355\n",
-      "14     Warm Temperate Northwest Atlantic  0.078015\n",
-      "15  Warm Temperate Southwestern Atlantic  0.071286\n",
-      "16      Juan Fern ndez and Desventuradas  0.069873\n",
-      "17              Red Sea and Gulf of Aden  0.059408\n",
-      "18                 Tropical East Pacific  0.059041\n",
-      "19                             Galapagos  0.054821\n"
+      "41                  Southern New Zealand  0.340892\n",
+      "1                      Amsterdam-St Paul  0.303475\n",
+      "8                      Central Polynesia  0.242988\n",
+      "29            Northeast Australian Shelf  0.238981\n",
+      "34                           Sahul Shelf  0.209192\n",
+      "35                            Scotia Sea  0.161785\n",
+      "27                                  None  0.159536\n",
+      "28                    North Brazil Shelf  0.102526\n",
+      "40                   Southeast Polynesia  0.082473\n",
+      "23                            Magellanic  0.079355\n",
+      "54     Warm Temperate Northwest Atlantic  0.078015\n",
+      "57  Warm Temperate Southwestern Atlantic  0.071286\n",
+      "20      Juan Fern ndez and Desventuradas  0.069873\n",
+      "33              Red Sea and Gulf of Aden  0.059408\n",
+      "48                 Tropical East Pacific  0.059041\n",
+      "15                             Galapagos  0.054821\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -190,15 +190,6 @@
     "print(a.sort_values('per_wilderness_covered_by_WH', ascending=False)[['PROVINCE', 'per_wilderness_covered_by_WH', 'num_wh']])\n",
     "del a"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
