--- a/wilderness_analysis.ipynb
+++ b/wilderness_analysis.ipynb
@@ -1291,7 +1291,7 @@
     "\n",
     "Futhermore, the mismatching issue is further plagued by spatial data quality. See below Natural System of Wrangel Island, where the blue part is the overlap between WH and biogeography\n",
     "\n",
-    "![wrangel](wrangel_island.png)\n",
+    "![wrangel](wrangel_island.PNG)\n",
     "\n",
     "The only logical/sensible way to deal with this is to use WH calulation for its self (i.e. how much of wilderness is in WH system), while the intersection WH result for relations with biogeography."
    ]
