new maps for draft

--- a/WH marine wilderness methodology.ipynb
+++ b/WH marine wilderness methodology.ipynb
@@ -40,15 +40,29 @@
     "\n",
     "Step by step analysis is included in the [detailed methodology notebook](./wilderness_analysis.ipynb)\n",
     "\n",
-    "##  Observations of preliminary result\n",
+    "---\n",
     "\n",
-    "### Global distribution of marine wilderness within EEZ \n",
+    "#  Text for marine WH wilderness analysis\n",
     "\n",
-    "The distribution of marine wilderness is uneven and reflects the distribution of pressures across the oceans cumulatively.\n",
+    "## Classification of the marine environment\n",
     "\n",
-    "[map: overall dist marine pressure](#)\n",
+    "It is necessary for our purpose to apply a classification scheme to the marine environment so that its wilderness values can be systematically examined and its wilderness gaps identified. To this end, we chose the Marine Ecoregion of the World (MEOW), providing a useful framework on near-shore, continental waters (up to 200m depth); and the Pelagic Provinces of the World, for waters beyond 200m depth up to the limit of EEZ (up to 200 nautical miles) ([Spalding et al 2007, 2012](#)). The cut-off of pelagic waters is to align with the definition that the Convention does not apply to the large majority of oceans beyond national jurisdiction. We used the level of provinces that have been used in the previous IUCN marine WH thematic study ([Abudulla et al 2013](#)) as they are deemed of appropriate scale for the identification and prioritisation of broad gaps globally. \n",
     "\n",
-    "Thanks to difficulties in navigation due to multi-year ice, the Arctic region has the largest marine wilderness, covering a total of 5.4 million $km^2$, and also represents one of the highest percentage coverage in all marine provinces. This includes 3.3 million $km^2$ of waters within the near-shore Arctic province (continental shelf, up to 200 meter depth), which accounts for almost half (47.9%) of the entire marine province, and more than 2 million $km^2$ beyond the continental shelf and within the EEZ boundary, i.e., 58.9% of its pelagic province. It presents the largest contiguous waters with a significant wilderness coverage. \n",
+    "## Current distribution of wilderness within marine provinces\n",
+    "\n",
+    "**[AP: one or two paragraph about wilderness in marine provinces]**\n",
+    "\n",
+    "The [cumulative marine pressure](http://www.nature.com/ncomms/2015/150714/ncomms8615/full/ncomms8615.html) data (hereafter referred to as *the Marine Pressure Data* unless otherwise specified) was used as the aggregated indicator, a proxy for wilderness in the marine environment. It summarises impacts to global oceans based on a set of 19 factors up to 2013, including fishing, climate change, land-based stressors. This layer represents the best globally consistent marine cumulative pressure at a high resolution of 1 $km^2$.\n",
+    "\n",
+    "We chose the 10 percentile value of the Marine Pressure Data for all marine areas within EEZ as the threshold to a definition of marine wilderness. This empirical threshold was developed by comparing other candidate values at 1, 3, 5, 10 percentiles, and was decided for its quality to highlight existing marine wilderness areas, in accordance with expert knowledge.\n",
+    "\n",
+    "The distribution of marine wilderness is uneven and reflects different combined cumulative pressures across all marine provinces. We find large variations between provinces with little disturbed waters and those subject to intensive human influence. The distribution can be found in the below map.\n",
+    "\n",
+    "![map: overall dist marine pressure](mm_overall_dist.png)\n",
+    "\n",
+    "Most notably, due to difficulties in navigation as a result of multi-year ice, the Arctic region remains largely intact with largest marine wilderness, covering a total of 5.4 million $km^2$ and also represents one of the highest percentage coverage (46.8%) in all marine provinces. This includes 3.3 million $km^2$ of waters within the near-shore Arctic province, which accounts for almost half (47.9%) of the entire marine province, and more than 2 million $km^2$ beyond the continental shelf and within the EEZ boundary, i.e., 58.9% of its pelagic province, making it the largest contiguous waters with a significant wilderness coverage. \n",
+    "\n",
+    "![map: polar map focusing on Arctic](mm_dist_polar.png)\n",
     "\n",
     "Polynesia (including Central Polynesia, Southeast Polynesia, and Marquesas), Sahul Shelf, Tropical East Pacific, Subantarctic Islands, Southern New Zealand and Subantarctic New Zealand, also contain substantial marine wilderness area within their boundaries (each more than 200,000 $km^2$). \n",
     "\n",
@@ -58,40 +72,59 @@
     "\n",
     "The same can be observed for Subantarctic New Zealand region, where large pelagic provinces such as Subantarctic, Southern Subtropical Front, Antarctic Polar Front cover 313,650 $km^2$ (66.1%), 170,773 $km^2$ (74.0%) and 19,671 $km^2$ (56.5%) respectively.\n",
     "\n",
-    "Measuring a wilderness area of 288,274 $km^2$ (21.9%) within its continental shelf, Sahul Shelf is second largest to the Arctic region in terms of near-shore wilderness.\n",
+    "Notably, measuring a wilderness area of 288,274 $km^2$ (21.9%) within its continental shelf, Sahul Shelf is second largest to the Arctic region in terms of near-shore wilderness.\n",
     "\n",
-    "[map:highlight regions/meow of high wildernss](#)\n",
+    "![map:highlight regions/meow of high wildernss](mm_highlight_overlap.png)\n",
     "\n",
-    "### Marine wilderness inside current natural WH sites\n",
+    "## Marine wilderness inside marine World Heritage sites\n",
     "\n",
-    "Wilderness area already exist in marine WH sites and those containing marine components in good numbers. For example, the Great Barrier Reef, off the east coast of Australia, has overall the largest marine wilderness area in all natural WH sites (78,310 $km^2$, 22.7% of its total marine area). Phoenix Islands Protected Area, the largest WH site in the world, covers a considerable 23,432 $km^2$ of wilderness areas in the pelagic province of Central Polynesia. Overall, ten natural WH sites contain more than 1,000 $km^2$ wilderness area inside their boundaries, out of 33 sites that overlap with marine wilderness area, according to the spatial analysis.\n",
+    "As can be seen in the analysis (see [map](#) below), 33 of 47 marine WH sites, contain, to varying degrees, marine wilderness areas inside their designated boundaries. This indicates some element of the wilderness value have been accepted and reflected by the Convention already, albeit implicitly. It also highlights the fact vast wilderness areas locate beyond the current distribution of marine WH sites that may host potential OUVs. \n",
+    "\n",
+    "![map:wh overlay marine pressure](mm_wh_overlap.png) \n",
+    "\n",
+    "For example, the Great Barrier Reef, off the east coast of Australia, has overall the largest marine wilderness area in all natural WH sites (78,310 $km^2$, 22.7% of its total marine area). Phoenix Islands Protected Area, the largest WH site in the world, covers a considerable 23,432 $km^2$ of wilderness areas in the pelagic province of Central Polynesia. Overall, ten natural WH sites contain more than 1,000 $km^2$ wilderness area inside their boundaries, out of 33 sites that overlap with marine wilderness area, according to the spatial analysis.\n",
     "\n",
     "While the actual amount of marine wilderness in each site is an important indicator, the percentage of its marine wilderness area may provide another useful indication of the degree to which how significant these vast wilderness areas are captured in relation to their own size. For instance, in the Subantarctic Islands region, the Macquarie Island, 95.4% of its 5,396.7 $km^2$ waters lie almost entirely within wilderness area in the Antarctic Polar Front pelagic province. In the Arctic province, the Natural System of Wrangel Island Reserve occupies a significant area of 7,200 $km^2$ and this amounts to 59.7% of its total marine area). \n",
     "\n",
     "[table:export wh wilderness csv](#)\n",
     "\n",
-    "As can be seen in the analysis (see [map](#) below), the majority of marine WH sites (33 out of 47) contain, to varying degrees, some marine wilderness areas already inside their designated boundaries, indicating some element of the wilderness value have been accepted and reflected by the Convention already, albeit implicitly. It, however, also highlights the fact vast wilderness areas locate beyond the current distribution of marine WH sites that may host potential OUVs. There is a need to consistently recognise such value and provide a systematic framework to identify and prioritise marine areas where such value may reside. Next we combine what have been analysed so far and further examine marine wilderness within each marine province that are covered by existing WH sites, and seek to identify those provinces that host large wilderness that have little WH coverage.\n",
+    "There is a need to consistently recognise such value and provide a systematic framework to identify and prioritise marine areas where such value may reside. Next we combine what have been analysed so far and further examine marine wilderness within each province that having existing marine WH sites, and seek to identify those provinces that host large wilderness that have little WH coverage.\n",
     "\n",
-    "[map:wh overlay marine pressure](#) \n",
+    "## Gaps in marine wilderness \n",
     "\n",
+    "Currently, 30 of the 62 marine provinces are home to at least one marine WH site. Both the Tropical East Pacific and the Northern European Seas have four sites and five provinces: Subantarctic Island, Western Indian Ocean, Warm Temperate Northeast Pacific, Tropical Southwestern Pacific and Weste Central Australian Shelf have two each. \n",
     "\n",
-    "### Gap analysis of marine wilderness WH sites\n",
-    "\n",
-    "Currently, 30 of the 62 marine provinces are home to at least one marine WH site. Both the Tropical East Pacific and the Northern European Seas have four sites and five provinces: Subantarctic Island, Western Indian Ocean, Warm Temperate Northeast Pacific, Tropical Southwestern Pacific and Weste Central Australian Shelf have two each. The remaining 32 sites, including Marquesas, Sahul Shelf, and Southeast Polynesia, host no marine WH sites in its wilderness area. \n",
+    "The remaining 32 provinces, including Marquesas, Sahul Shelf, and Southeast Polynesia, host no marine WH sites and present obvious gaps in its wilderness area.\n",
     "\n",
     "[table: export_gap_meow_province](#)\n",
     "\n",
-    "However, numbers alone is a rather poor indicator as it fails to take into consideration the actual overlap of wilderness area within each province. In fact, having a WH in a province does not automatically suggest its wilderness value in that marine region has been captured. As we have identified, in some of the provinces, marine WH sites over very little wilderness area. For example, Tropical East Pacific, though having four WH sites, has a small coverage of 0.5%. Arctic has one WH site (Natural System of Wrangle Island), but it makes less than 0.01% of its total wilderness areas. On the other end of the spectrum, WH sites cover almost entirely those in the West Central Australian Shelf and the Northeast Australian Shelf (97.4% and 82.1% respectively).\n",
+    "However, numbers alone is a rather poor indicator as it fails to take into consideration the actual overlap of wilderness area within each province. In contrast, having a WH in a province does not automatically suggest its wilderness area in that marine region has been captured. As we have identified, in some of the provinces, marine WH sites cover very little wilderness area. For example, Tropical East Pacific, though having four WH sites, has a small combined coverage of 0.5%. Arctic has one WH site (Natural System of Wrangle Island), but it makes less than 0.01% of its total wilderness areas. On the other end of the spectrum, some WH sites may cover entire provinces, for instance, sites in the West Central Australian Shelf and the Northeast Australian Shelf (97.4% and 82.1% respectively).\n",
+    "\n",
+    "Map: number of WH containing wilderness area in each province\n",
+    "\n",
+    "![map: highlight of gap provinces](mm_gap_num.png)\n",
+    "\n",
+    "Map: wilderness area in WH as percentage of total wilderness areain each province\n",
+    "\n",
+    "![map: highlight of gap provinces](mm_gap_per.png)\n",
+    "\n",
+    "\n",
+    "\n",
+    "It is important to note that, OUV remains the key criteria for inscribing a site to the WH List. A gap identified in this approach can provide useful insight and guidance in the search of potential wilderness sites of OUV, it does not qualify a nomination from the gap province without scrutinies at a more appropriate scale and rigorous comparative analysis.\n",
+    "\n",
+    "## Prioritising provinces and potential sites\n",
+    "\n",
+    "**[AP: do we need this paragraph?? perhaps not tied to the spatial analysis]**\n",
     "\n",
     "## Caveats\n",
     "\n",
     "As mentioned earlier, the cumulative marine pressure dataset is at best a proxy for wilderness. The definition of wilderness requires XXXXXX [DEF: wilderness](#) and no data has been nor in our opinion will be developed specifically to address wilderness in the marine environment. The nature of a global datasets determines that it will not capture every nuance of pressure or threat exhaustively that may invalidate the definition of marine wilderness in the context of World Heritage.\n",
     "\n",
-    "Nevertheless, with these shortcomings in mind, our analysis offers a useful framework to illustrate how data driven approaches can be employed to provide insight into how global gaps can be identified consistently and how, when better data become available, it can be improved to offer greater accuracy and higher resolution.\n",
+    "Nevertheless, with these shortcomings in mind, our analysis offers a useful framework to illustrate how data driven approaches can be employed to provide insight into how global gaps can be identified consistently and how, with more detailed data at appropriate scale, it can be improved to offer greater accuracy and higher resolution.\n",
     "\n",
-    "To compensate for deficiencies in global datasets and in the use of proxy, it will be important to use an expert driven system that can emphasis and target specific, relevant attributes of wilderness values.\n",
+    "Alternatively, to compensate for deficiencies in using global datasets and in the use of proxy of wilderness, it is important that an expert driven approach be used in conjunction that can emphasize and target specific, relevant attributes of wilderness values.\n",
     "\n",
-    "The results and gaps identified here remain indicative and should not be interpreted as the\n",
+    "The results and gaps identified here remain indicative at a global scale and should not be interpreted as recommendations for future nominations.\n",
     "\n",
     "\n",
     "![dist-map](dist_EEZ.png)\n",
